Commit current project state for 1.20.1-3.9.0-2
Includes the current local project tree while leaving AGENTS.md unchanged on the target branch.